--- a/test/result.html
+++ b/test/result.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>test</title>
-    <link href="css/auto_sprites.css" rel="stylesheet">
+    <link href="output/css/style.css" rel="stylesheet">
 </head>
 <body>
 <div></div>
