--- a/test/result.html
+++ b/test/result.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>test</title>
-    <link href="output/css/style.css" rel="stylesheet">
+    <link href="sprite_output/css/style.css" rel="stylesheet">
 </head>
 <body>
 <div></div>
@@ -23,4 +23,10 @@
 <div></div>
 <div></div>
 <div></div>
-
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
