--- a/test/main.html
+++ b/test/main.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>test</title>
-    <link href="sprite_output/css/style.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-<div></div>
-<div></div>
-<div></div>
 <div></div>
 <div></div>
 <div></div>
