--- a/test/style3.html
+++ b/test/style3.html
@@ -2,17 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>test</title>
-    <link href="css/style.css" rel="stylesheet">
+    <title>test3</title>
+    <link href="css/style3.css" rel="stylesheet">
 </head>
 <body>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
 <div></div>
 <div></div>
 <div></div>
